--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,21 @@ services:
       - "4000:4000"
     volumes:
       - "./api:/app"
+    depends_on:
+      - db
 
   db:
     image: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: "147852369"
-      MYSQL_PASSWORD: "147852369"
-      MYSQL_USER: root
       MYSQL_DATABASE: cleanerino
-    command: --lower_case_table_names=1
     ports:
       - "3306:3306"
     volumes:
       - ./mysql-data:/var/lib/mysql
+      - ./my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   adminer:
     image: adminer
